Began implementing basic fetch functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
 
   <body>
+    <label for="countries">Choose a Country</label>
+    <select id="countries"></select>
+    <div id="results"></div>
 
     <script src="scripts/fetch_api.js"></script>
   </body>
