Changed 'country' to 'city' and filtered out irrelevant results

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
   <body>
-    <label for="countries">Choose a Country</label>
-    <select id="countries"></select>
+    <label for="cities">Choose a City</label>
+    <select id="cities"></select>
     <div id="results"></div>
 
     <script src="scripts/fetch_api.js"></script>
