--- a/index.html
+++ b/index.html
@@ -9,59 +9,34 @@
 
   <body>
     <header>
-      <label for="cities">Please Choose a City</label>
+      <label for="cities">Please Choose a City: </label>
       <select id="cities"></select>
     </header>
     <div id="results">
-      <h2>Pollutant Measurements for</h2>
-      <h2 id="selected-city"></h2>
-      <p class="legend">
-        (Micrograms per cubic meter &mdash; μg/m<sup>3</sup>)
+      <h2>Air Quality for</h2>
+      <h2 id="selected-city">______</h2>
+
+      <p>
+        <span class="label">Measurements Taken: </span
+        ><span class="output" id="selected-measurements"></span>
       </p>
-      <label class="pollutant"
-        >Particulate Matter<sub>2.5</sub>:
-      </label>
-      <p></p>
-      <label class="pollutant"
-        >Particulate Matter<sub>10</sub>:
-      </label>
-      <p></p>
-      <label class="pollutant">Sulfur Dioxide: </label>
-      <p></p>
-      <label class="pollutant">Nitrogen Dioxide: </label>
-      <p></p>
-      <label class="pollutant">Ozone: </label>
-      <p></p>
-      <label class="pollutant">Carbon Monoxide: </label>
-      <p></p>
-      <label class="pollutant">Black Carbon: </label>
-      <p></p>
+      <p>
+        <span class="label">Number of Locations: </span
+        ><span class="output" id="selected-locations"></span>
+      </p>
     </div>
 
     <div id="lou-comparison">
-      <h2>Pollutant Measurements for</h2>
+      <h2>Air Quality for</h2>
       <h2>Louisville, Ky</h2>
-      <p class="legend">
-        (Micrograms per cubic meter &mdash; μg/m<sup>3</sup>)
+      <p>
+        <span class="label">Measurements Taken: </span
+        ><span class="output" id="lou-measurements"></span>
       </p>
-      <label class="pollutant"
-        >Particulate Matter<sub>2.5</sub>:
-      </label>
-      <p></p>
-      <label class="pollutant"
-        >Particulate Matter<sub>10</sub>:
-      </label>
-      <p></p>
-      <label class="pollutant">Sulfur Dioxide: </label>
-      <p></p>
-      <label class="pollutant">Nitrogen Dioxide: </label>
-      <p></p>
-      <label class="pollutant">Ozone: </label>
-      <p></p>
-      <label class="pollutant">Carbon Monoxide: </label>
-      <p></p>
-      <label class="pollutant">Black Carbon: </label>
-      <p></p>
+      <p>
+        <span class="label">Number of Locations: </span
+        ><span class="output" id="lou-locations"></span>
+      </p>
     </div>
 
     <script src="scripts/fetch_api.js"></script>
