Added national comparison data

--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
       </p>
     </div>
 
+    <div>
+      <p>
+        <span class="label">Fewest Measurements: </span
+        ><span class="output" id="min-measures"></span>
+      </p>
+      <p>
+        <span class="label">Most Measurements: </span
+        ><span class="output" id="max-measures"></span>
+      </p>
+      <p>
+        <span class="label">Mean Average: </span
+        ><span class="output" id="mean-measures"></span>
+      </p>
+      <p>
+        <span class="label">Median: </span
+        ><span class="output" id="med-measures"></span>
+      </p>
+    </div>
+
     <script src="scripts/fetch_api.js"></script>
   </body>
 </html>
